--- a/views/home_search.ejs
+++ b/views/home_search.ejs
@@ -155,7 +155,7 @@
                             html += "     <span><img src='img/ic.png' alt='' /></span>";
                             html += "     <span>";
                             html += "         <h5>"+result.userList[i].name+"</h5>";
-                            html += "         <p>"+((result.userList[i].group==undefined || result.userList[i].group=="") ? "소속단체 없음" : result.userList[i].group)+"</p>";
+                            html += "         <p>강사</p>";
                             html += "     </span>";
                             html += " </li>";
                         }
