강사 소개, 강사 소개 수정 페이지 / DB 작업 완료

--- a/views/home_ins.ejs
+++ b/views/home_ins.ejs
@@ -41,7 +41,7 @@
                 <text>교육생 <%= follower_count %>명</text>
             </div>
             <div id="header_ins_btn">
-                <button>강사 소개</button>
+                <button onclick="location.href='/introduction/<%= id %>';">강사 소개</button>
                 <button>교육생</button>
             </div>
         </div>
