--- a/views/home_profile.ejs
+++ b/views/home_profile.ejs
@@ -32,7 +32,7 @@
             </div>
 
             <div id="header_ins_btn">
-                <button>강사 소개</button>
+                <button onclick="location.href='/introduction/<%= id %>';">강사 소개</button>
                 <% if(userType == "1") { %>
                 <button>교육생</button>
                 <% } else { %>
