교육생 사이드메뉴 작업, 기타 페이지 조정작업

--- a/views/home_profile.ejs
+++ b/views/home_profile.ejs
@@ -69,8 +69,8 @@
             <div style="line-height: 160px; padding: 0;">
                 등록된 교육이 없습니다.
             </div>
-
-            <div></div>
+            <!--아래 회색 배경 -->
+            <div style="position: fixed; width: 100%; height: 100%; top: 0; left: 0; background-color: #f4f4f4; z-index: -1;"></div>
         </div>
 
 <% if( tourList.length == 0 ) { %>
