--- a/views/profile_edit_bgn.ejs
+++ b/views/profile_edit_bgn.ejs
@@ -187,11 +187,13 @@
                     <span class="basic_information_guide">발사이즈</span>
                     <input id="input_edit_foot" type="number" name="foot_size" placeholder="270" class="signup_input" value="<%= foot %>" />
                     <span class="signup_input_span_text">mm</span>
+                    <p class="explain_text t_left" style="width: 70%;">정사이즈를 입력하세요. (부츠, 스쿠버 핀 대여 시 필요)</p>
                 </div>
 
                 <div class="basic_information">
                     <span class="basic_information_guide" id="disease">특이병력</span>
                     <textarea id="input_edit_disease" name="disease" rows="4" cols="26"  placeholder="비염"><%= disease %></textarea>
+                    <p class="explain_text t_left" style="width: 70%;">회원님께 맞는 장비 대여와 안전한 교육 및 다이빙을 위해 필요한 정보입니다.</p>
                 </div>
 <% } %>
             </div>
