--- a/views/home_bgn.ejs
+++ b/views/home_bgn.ejs
@@ -14,6 +14,7 @@
         <style>
             .tour { background: white; }
             #CONTENT_ON { min-height: -webkit-fill-available; background: #f4f4f4; }
+            .side-nav ul li:hover{ background: white; }
         </style>
     </head>
 
@@ -26,28 +27,26 @@
 
         <div id="overlay"></div>
 
-        <div class="side-nav">
-            <div class="side-nav-head"></div>
 
+        <div class="side-nav">
             <ul>
-                <li class="name" onclick="location.href='/profile_bgn';">
+                <li class="name">
                     <span><img id="profile_image" src="<% if(!locals.image || image == "") { %>/img/default_user.png<% } else {%><%= image %><% } %>" alt="" class="img-circle"></span>
                     <span>
                         <h5 id="profile_name"><%= name %></h5>
                         <p class="explain_text" style="text-align: left;">교육생</p>
                     </span>
-                    <img class="arrow_right" src='/img/ic-arrow-ltr.svg' />
                 </li>
                 <li class="none"></li>
-                <li onclick="location.href='/license';">내 자격증</li>
+                <!--                <li onclick="location.href='/mybgn';">내 교육생</li>-->
+                <!--                <li onclick="location.href='/license';">내 자격증</li>-->
+                <li onclick="location.href='/profile_bgn';">내 정보</li>
                 <li>알림 설정</li>
                 <!-- <li class="none"></li> -->
                 <li onclick="location.href='/notice';">공지사항</li>
                 <li onclick="location.href='/policy';">약관 및 정책</li>
-                <li onclick="sendEmail();">이메일 보내기</li>
-                <li onclick="sendSMS();">문자 보내기</li>
-
-
+                <!--                <li onclick="sendEmail();">이메일 보내기</li>-->
+                <!--                <li onclick="sendSMS();">문자 보내기</li>-->
                 <!-- <li class="none"></li> -->
                 <li id="btn_logout">로그아웃</li>
             </ul>
@@ -70,9 +69,11 @@
 <% } else { %>
         <div id="CONTENT_OFF" class="hidden">
 <% } %>
-            <div style='position: fixed; width: 100%; height: 100%; top: 0; left: 0; padding-top: 0; padding-bottom: 0; background-color: #f4f4f4; z-index: -1;'>
-                <div style='margin-top: 100px; width: 100%; padding-top: 50px; padding-bottom: 50px; line-height: 24px; display: block; text-align: center; background-color: white; color: #333333;'>오른쪽 상단 돋보기 아이콘을 눌러<br>강사님을 찾아보세요</div>
+            <div>
+                <div style='position: fixed; top: 100px; width: 100%; padding-top: 50px; padding-bottom: 50px; line-height: 24px; display: block; text-align: center; background-color: white; color: #333333;'>오른쪽 상단 돋보기 아이콘을 눌러<br>강사님을 찾아보세요</div>
             </div>
+            <!--아래 회색 배경 -->
+            <div style="position: fixed; width: 100%; height: 100%; top: 0; left: 0; background-color: #f4f4f4; z-index: -1;"></div>
         </div>
 
 <% if( tourList.length == 0 ) { %>
