--- a/views/home_ins.ejs
+++ b/views/home_ins.ejs
@@ -100,7 +100,7 @@
                 <br>새로운 일정을 시작해보세요
             </div>
             <!--아래 회색 배경 -->
-            <div style="position: fixed; width: 100%; height: 100%; background-color: #f4f4f4; z-index: -1;"></div>
+            <div style="position: fixed; width: 100%; height: 100%; top: 0; left: 0; background-color: #f4f4f4; z-index: -1;"></div>
         </div>
 
 <% if( tourList.length == 0 ) { %>
