교육생 페이지로 이동

--- a/views/home_ins.ejs
+++ b/views/home_ins.ejs
@@ -42,7 +42,7 @@
             </div>
             <div id="header_ins_btn">
                 <button onclick="location.href='/introduction/<%= id %>';">강사 소개</button>
-                <button>교육생</button>
+                <button onclick="location.href='/mybgn';">교육생</button>
             </div>
         </div>
 
